<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sign_in"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_sign_in" />

    <item
        android:id="@+id/navigation_sign_up"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_sign_up" />

    <item
        android:id="@+id/navigation_daily_achievements"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_daily_achievements" />
    <item
        android:id="@+id/navigation_user_achievements"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_daily_achievements" />
    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_quiz" />


</menu>