<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sign_in">

    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="ru.ialmostdeveloper.soulfire_mobile.ui.SignInFragment"
        android:label="@string/title_sign_in"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/navigation_sign_up"
        android:name="ru.ialmostdeveloper.soulfire_mobile.ui.SignUpFragment"
        android:label="@string/title_sign_up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/navigation_daily_achievements"
        android:name="ru.ialmostdeveloper.soulfire_mobile.ui.DailyAchievementsFragment"
        android:label="@string/title_daily_achievements"
        tools:layout="@layout/fragment_daily_achievements" />

    <fragment
        android:id="@+id/navigation_user_achievements"
        android:name="ru.ialmostdeveloper.soulfire_mobile.ui.UserAchievementsFragment"
        android:label="@string/title_user_achievements"
        tools:layout="@layout/fragment_user_achievements" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="ru.ialmostdeveloper.soulfire_mobile.ui.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />
</navigation>